# Agentic-AI-Experiment

./: .gitignore  .npmrc  README.md  WORKFLOW_SETUP_COMPLETE.md  deploy.env  sample-package.json
.github/workflows/: QUICK_START.md  build.yml  pr.yml  sync-dev-to-main-enhanced.yml  sync-dev-to-main-enhanced.yml.disabled  sync-dev-to-main.yml
docs/: README.old.md
mcp-oncall-assistant/: .env.example  .gitignore  HARDCODED_PATHS_AUDIT.md  HARD_CODED_PATH_REMOVAL.md  QUICKSTART.md  README.md  final_wplog_validation.py  mcp-oncall-assistant.code-workspace  pyproject.toml  requirements.txt  test_caseware_fix.py  test_wplog_bottlenecks.py  wplog_analysis_report.py
mcp-oncall-assistant/scripts/: fix-venv.bat  setup-environment.ps1  start-mcp.bat  start-mcp.ps1
mcp-oncall-assistant/src/: main.py  server.py  test-environment.py
mcp-oncall-assistant/src/tools/: README.md
mcp-oncall-assistant/src/tools/wpfile/: caseware_stream_extractor.py  caseware_universal_extractor.py  deep_valide_analyzer.py  enhanced_valide_extractor.py  valide_forensic_analyzer.py
mcp-oncall-assistant/src/tools/wplog/: main.py  wplog_analyzer.py
mcp-oncall-assistant/test_data/: README.md
mcp-oncall-assistant/tests/: README.md  __init__.py  final_wplog_validation.py  run_all_tests.py  test-environment.py  test_caseware_fix.py  test_path_config.py  test_server.py  test_wplog_bottlenecks.py  wplog_analysis_report.py
oncall-support/: Dockerfile  MCP_INSPECTOR_GUIDE.md  README.md  docker-compose.yml  env.example  package-lock.json  package.json  tsconfig.json  vitest.config.ts
(+38 files in other folders)
